Работа над модулями ParticipationRequest, Event. Необходима доработка, реализована большая часть Event(Admin, Private, Public API). Начата разработка ParticipationRequest. Добавлен метод в модуль stats для получения количества обращений по eventId.